deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finaware-web
  namespace: finaware
spec:
  selector:
    app: finaware-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
